--- a/app/globals.scss
+++ b/app/globals.scss
@@ -7,13 +7,32 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
-
+:root::-webkit-scrollbar {
+  width: 10px;
+}
+:root::-webkit-scrollbar-thumb {
+  background-color: #2f3542;
+  border-radius: 5px;
+}
+:root::-webkit-scrollbar-track {
+  background-color: transparent;
+}
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+}
+
+.container{
+  width:100%;
+  max-width: 1200px;
+  box-sizing: border-box;
+  padding:0 20px;
+}
+header{
+  z-index: 9999;
 }
 
 /* body {
