fix: 디자인 조금씩 수정

--- a/app/header/Header.scss
+++ b/app/header/Header.scss
@@ -3,7 +3,7 @@ header .menu{
     &::before{
         content: "";
         position:absolute;
-        bottom:0;
+        bottom: -2px;
         left: 0;
         width:100%;
         transform: scaleX(0);
