--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,6 +1,14 @@
+@import url('https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@2.0/nanumsquare.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: 'NanumSquare', system-ui, sans-serif;
+  }
+}
 
 :root {
   --foreground-rgb: 0, 0, 0;
