markdown 문제 해결 및 쓸데 없는 코드 삭제

--- a/app/sosic/client.scss
+++ b/app/sosic/client.scss
@@ -1,5 +1,7 @@
-li, a{
-    display: inline-block;
-    cursor: pointer;
-    transition: all 0.5s;
-}
+.p-tabview-nav{
+    li, a{
+      display: inline-block;
+      cursor: pointer;
+      transition: all 0.5s;
+    }
+  }
