--- a/app/header/Header.scss
+++ b/app/header/Header.scss
@@ -1,19 +1,75 @@
-header .menu{
-    transition:color 0.3s;
-    &::before{
-        content: "";
-        position:absolute;
-        bottom: -2px;
-        left: 0;
-        width:100%;
-        transform: scaleX(0);
-        transition:transform 0.3s;
-        border-bottom: 2px solid rgb(58, 97, 236);
+.card{
+    position:sticky;
+    top:0;
+    z-index: 9999;
+    border: 1px solid #dee2e6;
+    background: #f8f9fa;
+    .p-menubar{
+        max-width: 1300px;
+        margin: auto;
+        border: none;
+        .p-menubar-button{
+            display: none;
+            cursor: pointer;
+        }
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .p-menubar-root-list{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            .p-menuitem{
+                position: relative;
+                .p-menuitem-link{
+                    display: flex;
+                    align-items: center;
+                }
+                .p-submenu-list{
+                    position: absolute;
+                    display: none;
+                    .p-menu-separator{
+                        border-top: 1px solid #dee2e6;
+                        margin: 0.25rem 0;
+                    }
+                }
+                &.p-menuitem-active{
+                    .p-submenu-list{
+                        display: block;
+                    }
+                }
+            }
+        }
     }
-    &:hover{
-        color:rgb(58, 97, 236);
-        &::before{
-            transform: scaleX(1);
+}
+@media screen and (max-width:960px) {
+    .p-menubar{
+        justify-content: space-between;
+        .p-menubar-button{
+            display: flex;
+            width: 2rem;
+            height: 2rem;
+            align-items: center;
+            justify-content: center;
+            color: #6c757d;
+            border-radius: 50%;
+            transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
+        }
+        .p-menubar-root-list {
+            .p-menuitem {
+                .p-submenu-list{
+                    width: 100%;
+                    position: static;
+                    box-shadow: none;
+                    border: 0 none;
+                    .p-menu-separator{
+                        border-top: 1px solid #dee2e6;
+                         margin: 0.25rem 0;
+                    }
+                }
+                width: 100%;
+                position: static;
+            }
         }
     }
 }
