--- a/app/header/Header.scss
+++ b/app/header/Header.scss
@@ -43,32 +43,35 @@
     }
 }
 @media screen and (max-width:960px) {
-    .p-menubar{
-        justify-content: space-between;
-        .p-menubar-button{
-            display: flex;
-            width: 2rem;
-            height: 2rem;
-            align-items: center;
-            justify-content: center;
-            color: #6c757d;
-            border-radius: 50%;
-            transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
-        }
-        .p-menubar-root-list {
-            .p-menuitem {
-                .p-submenu-list{
+    .card{
+        .p-menubar{
+            justify-content: space-between;
+            .p-menubar-button{
+                display: flex;
+                width: 2rem;
+                height: 2rem;
+                align-items: center;
+                justify-content: center;
+                color: #6c757d;
+                border-radius: 50%;
+                transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
+            }
+            .p-menubar-root-list {
+                display: none;
+                .p-menuitem {
+                    .p-submenu-list{
+                        width: 100%;
+                        position: static;
+                        box-shadow: none;
+                        border: 0 none;
+                        .p-menu-separator{
+                            border-top: 1px solid #dee2e6;
+                             margin: 0.25rem 0;
+                        }
+                    }
                     width: 100%;
                     position: static;
-                    box-shadow: none;
-                    border: 0 none;
-                    .p-menu-separator{
-                        border-top: 1px solid #dee2e6;
-                         margin: 0.25rem 0;
-                    }
                 }
-                width: 100%;
-                position: static;
             }
         }
     }
