menubar 햄버거 작동 안하는 버그 수정

--- a/app/header/Header.scss
+++ b/app/header/Header.scss
@@ -46,6 +46,11 @@
     .card{
         .p-menubar{
             justify-content: space-between;
+            &.p-menubar-mobile-active{
+                .p-menubar-root-list{
+                    display: flex;
+                }
+            }
             .p-menubar-button{
                 display: flex;
                 width: 2rem;
